# DMonitor

./: .gitignore  CMakeLists.txt  CMakePresets.json  ClientManager.c  ClientManager.h  ControlSystem.h  DMonitor.c  DMonitorThread.c  DMonitorThread.h  DebugUtil.h  GUIManager.c  GUIManager.h  README.md  RWLock.h  SensorLog.c  SensorLog.h  Sensors.c  Sensors.h  ServerLauncher.c  ServerLauncher.h  TabPanel.c  TabPanel.h  Tree.c  Tree.h  csv.c  csv.h
Actuator/: LedActuator.c
AiModel/: ai.c
AiModel/model/: chungbuk_maple_model.h  daegu_maple_model.h  daejeon_maple_model.h  gwangju_blossom_model.h  gwangju_maple_model.h  gyeonggi_blossom_model.h  jeju_blossom_model.h  jeonnam_maple_model.h  seoul_blossom_model.h
Client/: SensorLog.c  Sensors.c
Client/Actuator/: BuzzerActuator.c  BuzzerActuator.h  LedActuator.h
Client/ClientActuator/: Actuator.c  Actuator.h  CMakeLists.txt  Client.c  DebugUtil.h
Client/ClientActuator/Actuator/: BuzzerActuator.c  BuzzerActuator.h  LedActuator.c
Client/ClientSensor/: CMakeLists.txt  Client.c  Sensors.c  Sensors.h
Client/ClientSensor/Sensor/: ColorSensor.c  Dht11Sensor.c  FlameSensor.c  GasSensor.c  GasSensor.h  LightSensor.c
ClientActuator/: Actuator.c  Client.c
ClientActuator/Actuator/: LedActuator.h
ClientActuator/Sensor/: ColorSensor.h  Dht11Sensor.c
ClientSensor/: Client.c  Sensors.c  Sensors.h
ClientSensor/Sensor/: Dht11Sensor.h  LightSensor.h
DMonitor/AiModel/: ai  ai.c  ai.h
DMonitor/src/: CMakeLists.txt  ClientManager.c  ClientManager.h  Color.c  Color.h  ControlSystem.c  DMonitor.c  DMonitorThread.c  DMonitorThread.h  FileLock.h  FileManager.c  FileManager.h  GUIManager.c  GUIManager.h  SensorData.h  ServerLauncher.c  ServerLauncher.h  TabPanel.c  Tree.c  Tree.h
DMonitor/testData/: test.csv
DMonitor/utils/: RWLock.c  csv.c  csv.h  logger  logger.c  logger.h  map  map.c  map.h
Sensor/: ColorSensor.c  ColorSensor.h  Dht11Sensor.c  Dht11Sensor.h  FlameSensor.c  FlameSensor.h  GasSensor.c  GasSensor.h
ai/: ai.ipynb  convert.ipynb
ai/data/: 강원도 단풍나무 데이터.xlsx  강원도 벚나무 데이터.xlsx  경기도 단풍나무 데이터.xlsx  경기도 벚나무 데이터.xlsx  경상남도 단풍나무 데이터.xlsx  경상남도 벚나무 데이터.xlsx  경상북도 단풍나무 데이터.xlsx  경상북도 벚나무 데이터.xlsx  광주시 단풍나무 데이터.xlsx  광주시 벚나무 데이터.xlsx  대구시 단풍나무 데이터.xlsx  대구시 벚나무 데이터.xlsx  대전시 단풍나무 데이터.xlsx  대전시 벚나무 데이터.xlsx  부산시 단풍나무 데이터.xlsx  부산시 벚나무 데이터.xlsx  서울시 단풍나무 데이터.xlsx  서울시 벚나무 데이터.xlsx  울산시 단풍나무 데이터.xlsx  울산시 벚나무 데이터.xlsx  인천시 단풍나무 데이터.xlsx  인천시 벚나무 데이터.xlsx  전라남도 단풍나무 데이터.xlsx  전라남도 벚나무 데이터.xlsx  전라북도 단풍나무 데이터.xlsx  전라북도 벚나무 데이터.xlsx  제주도 단풍나무 데이터.xlsx  제주도 벚나무 데이터.xlsx  충청남도 단풍나무 데이터.xlsx  충청남도 벚나무 데이터.csv  충청남도 벚나무 데이터.xlsx  충청북도 단풍나무 데이터.xlsx  충청북도 벚나무 데이터.xlsx
ai/model/: busan_blossom_model.pkl  busan_maple_model.pkl  chungbuk_blossom_model.pkl  chungbuk_maple_model.pkl  chungnam_blossom_model.pkl  chungnam_maple_model.pkl  daegu_blossom_model.pkl  daegu_maple_model.pkl  daejeon_blossom_model.pkl  daejeon_maple_model.pkl  gangwon_blossom_model.pkl  gangwon_maple_model.pkl  gwangju_blossom_model.pkl  gwangju_maple_model.pkl  gyeongbuk_blossom_model.pkl  gyeongbuk_maple_model.pkl  gyeonggi_blossom_model.pkl  gyeonggi_maple_model.pkl  gyeongnam_blossom_model.pkl  gyeongnam_maple_model.pkl  incheon_blossom_model.pkl  incheon_maple_model.pkl  jeju_blossom_model.pkl  jeju_maple_model.pkl  jeonbuk_blossom_model.pkl  jeonbuk_maple_model.pkl  jeonnam_blossom_model.pkl  jeonnam_maple_model.pkl  seoul_blossom_model.pkl  seoul_maple_model.pkl  ulsan_blossom_model.pkl  ulsan_maple_model.pkl
ai/강원도/: 2010 강원도 날씨 데이터.csv  2012 강원도 날씨 데이터.csv  2013 강원도 날씨 데이터.csv  2014 강원도 날씨 데이터.csv  2015 강원도 날씨 데이터.csv  2016 강원도 날씨 데이터.csv  2017 강원도 날씨 데이터.csv  2018 강원도 날씨 데이터.csv  2019 강원도 날씨 데이터.csv  2020 강원도 날씨 데이터.csv  2021 강원도 날씨 데이터.csv  2022 강원도 날씨 데이터.csv  2023 강원도 날씨 데이터.csv  2024 강원도 날씨 데이터.csv
ai/경기도/: 2010 경기도 날씨 데이터.csv  2011 경기도 날씨 데이터.csv  2012 경기도 날씨 데이터.csv  2013 경기도 날씨 데이터.csv  2014 경기도 날씨 데이터.csv  2015 경기도 날씨 데이터.csv  2016 경기도 날씨 데이터.csv  2017 경기도 날씨 데이터.csv  2018 경기도 날씨 데이터.csv  2019 경기도 날씨 데이터.csv  2020 경기도 날씨 데이터.csv  2021 경기도 날씨 데이터.csv  2022 경기도 날씨 데이터.csv  2023 경기도 날씨 데이터.csv  2024 경기도 날씨 데이터.csv
ai/경상남도/: 2010 경상남도 날씨 데이터.csv  2011 경상남도 날씨 데이터.csv  (+13 more)
(+256 files in other folders)
